Alterações do site - matrícula: 899492

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Portfolio</title>
 </head>
 <body>
-    
+    <header>
+        <h1>João Francisco</h1>
+        <h3>Engenheiro de Software</h3>
+        <p>Alameda da Jabuticaba</p>
+        <p>JoaoRoblox@gmail.com</p>
+        <p>(31)94848-8484</p>
+    </header>
+
+    <div class="conteudo">
+        <main>
+            <section>
+                <h2>Experiência</h2>
+                <h3>Especialista em API Rest</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora ad mollitia fugiat corporis vero, esse temporibus numquam iusto doloremque, perspiciatis qui voluptatibus libero consequuntur repellendus quasi quis nulla rerum vitae.</p>
+
+                <h3>Especialista em Integração  de API</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptatum et quaerat quibusdam reiciendis. Sequi officia accusamus officiis, explicabo veniam provident minima voluptatibus illum itaque, qui, autem maxime culpa magnam.</p>
+            </section>
+
+            <section>
+                <h2>Educação</h2>
+                <h3>Bacharel em Geologia</h3>
+                <p>Universidade Goiabana</p>
+                <h3>Bacharel Engenharia de Software</h3>
+                <p>UniEsquina</p>
+            </section>
+        </main>
+
+        <aside>
+            <img src="/img/perfil.jpeg" alt="Foto de Perfil" class="foto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nemo quos quidem suscipit, illo commodi ab earum aspernatur odio mollitia dolore enim necessitatibus corporis, sapiente labore ex! Perspiciatis, ullam blanditiis?</p>
+
+            <h2>Habilidades</h2>
+            <ul>
+                <li>Programacao Orientada a Objetos</li>
+                <li>Java</li>
+                <li>SpringBoot</li>
+                <li>Maven</li>
+                <li>MySQL</li>
+            </ul>
+
+            <h2>Línguas</h2>
+            <ul>
+                <li>Polones - Avançado</li>
+                <li>Ingles - Avançado</li>
+                <li>Libanes - Intermediario</li>
+                <li>Sueco - Intermediario</li>
+            </ul>
+        </aside>
+    </div>
 </body>
 </html>
